logs/wsgi-jsonrpc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/wsgi_jsonrpc'...
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc/__init__.py'...
***   File "./lib/python3.5/site-packages/wsgi_jsonrpc/__init__.py", line 98
    print 'Attribute name conflict -- %s must be removed before attribute of the same name can be added'
                                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wsgi_jsonrpc/json_tools.py'...
***   File "./lib/python3.5/site-packages/wsgi_jsonrpc/json_tools.py", line 88
    raise Exception, 'unsupported transport'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info'...
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/._setup.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/setup.py'...
Listing './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc'...
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/.___init__.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/._json_tools.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/._test_jsonrpc.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/__init__.py'...
***   File "./lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/__init__.py", line 98
    print 'Attribute name conflict -- %s must be removed before attribute of the same name can be added'
                                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/json_tools.py'...
***   File "./lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/json_tools.py", line 88
    raise Exception, 'unsupported transport'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgi_jsonrpc-0.2.9.egg-info/wsgi_jsonrpc/test_jsonrpc.py'...
Listing './share'...
Listing './share/python-wheels'...
